--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Brontë family'
 - !lcc 'PR'
 - !lcsh 'Brontë, Patrick Branwell, 1817-1848'
+- GITenberg
 title: The Brontë Family, with special reference to Patrick Branwell Brontë. Vol.
   1 of 2
 url: http://www.gutenberg.org/ebooks/37843
